@@ -2,13 +2,11 @@ package com.bnk.domain.user.service;
 
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.assertj.core.api.Assertions.assertThatThrownBy;
-import static org.mockito.ArgumentMatchers.any;
-import static org.mockito.ArgumentMatchers.eq;
-import static org.mockito.BDDMockito.given;
-import static org.mockito.BDDMockito.then;
-import static org.mockito.Mockito.never;
+import static org.mockito.ArgumentMatchers.*;
+import static org.mockito.BDDMockito.*;
 
 import java.util.Collections;
+import java.util.List;
 import java.util.Optional;
 
 import org.junit.jupiter.api.DisplayName;
@@ -23,6 +21,8 @@ import org.mockito.quality.Strictness;
 import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.test.util.ReflectionTestUtils;
 
+import com.bnk.domain.user.dto.query.CardApplicationRow;
+import com.bnk.domain.user.dto.query.OwnedCardRow;
 import com.bnk.domain.user.dto.request.PasswordChangeRequest;
 import com.bnk.domain.user.dto.request.UserUpdateRequest;
 import com.bnk.domain.user.dto.response.CardStatusResponse;
@@ -34,17 +34,17 @@ import com.bnk.global.exception.ErrorCode;
 import com.bnk.global.util.audit.AuditLogger;
 
 /**
- * UserService 단위 테스트
+ * UserService 단위 테스트 (SonarQube 커버리지 대상)
  *
- * [수정 이력]
- * - @Mock AuditLogger auditLogger 추가
- *   (UserService 생성자: UserMapper + PasswordEncoder + AuditLogger
- *    → AuditLogger Mock 없으면 @InjectMocks 생성자 주입 실패 → NullPointerException)
- * - UpdateMyInfo 클래스 내 잘못된 테스트 수정
- *   · "정상_변경성공": updateMyInfo가 아닌 changePassword를 호출하고 있었음 → 올바른 updateMyInfo 호출로 교체
- *   · revokeAllSessions stub 일부 제거 (updateMyInfo는 세션 revoke를 직접 호출하지 않음)
- * - @MockitoSettings(LENIENT): changePassword에서 findRecentPasswordHashes 결과에 따라
- *   insertPasswordHistory stub이 사용 안 될 수 있음
+ * ── 주의 사항 ───────────────────────────────────────────────────────
+ * · User 모델 비밀번호 필드명: passwordHash  (password 아님)
+ * · updatePassword 시그니처: (userId, passwordHash, lastPasswordChangedAt) — 3개 파라미터
+ * · updateMyInfo 분기:
+ *     - 개인정보(name/phone/job 등) 변경 → currentPassword 검증 필요
+ *     - 알림 설정(pushEnabled/marketingAgree) 만 변경 → 검증 불필요
+ * · getMyCards 반환 타입: CardStatusResponse(ownedCards, applications)
+ *     - ownedCards = selectOwnedCards(userId) 결과
+ *     - applications = selectCardApplications(userId) 결과
  */
 @ExtendWith(MockitoExtension.class)
 @MockitoSettings(strictness = Strictness.LENIENT)
@@ -53,29 +53,28 @@ class UserServiceTest {
 
     @Mock private UserMapper      userMapper;
     @Mock private PasswordEncoder passwordEncoder;
-
-    // ▼ 핵심 수정: AuditLogger Mock 추가 (UserService @RequiredArgsConstructor 의존성)
     @Mock private AuditLogger     auditLogger;
 
     @InjectMocks
     private UserService userService;
 
+    // ── 상수 ─────────────────────────────────────────────────────────
     private static final Long   USER_ID = 1L;
     private static final String CURRENT = "Current123!";
     private static final String NEW_PW  = "NewSecure123!";
     private static final String ENC_PW  = "$2a$10$encodedPasswordHashValue";
 
-    // ── 픽스처 ────────────────────────────────────────────────────
+    // ── Fixture ──────────────────────────────────────────────────────
 
     private User activeUser() {
-        User user = new User();
-        ReflectionTestUtils.setField(user, "userId",       USER_ID);
-        ReflectionTestUtils.setField(user, "passwordHash", ENC_PW);
-        ReflectionTestUtils.setField(user, "statusCode",   "ACTIVE");
-        ReflectionTestUtils.setField(user, "email",        "test@bnk.co.kr");
-        ReflectionTestUtils.setField(user, "name",         "홍길동");
-        ReflectionTestUtils.setField(user, "phone",        "010-1234-5678");
-        return user;
+        User u = new User();
+        ReflectionTestUtils.setField(u, "userId",       USER_ID);
+        ReflectionTestUtils.setField(u, "passwordHash", ENC_PW);   // 실제 필드명
+        ReflectionTestUtils.setField(u, "statusCode",   "ACTIVE");
+        ReflectionTestUtils.setField(u, "email",        "test@bnk.co.kr");
+        ReflectionTestUtils.setField(u, "name",         "홍길동");
+        ReflectionTestUtils.setField(u, "phone",        "010-1234-5678");
+        return u;
     }
 
     private PasswordChangeRequest pwChangeReq(String current, String newPw, String confirm) {
@@ -86,12 +85,7 @@ class UserServiceTest {
         return req;
     }
 
-    /**
-     * 내 정보 수정 요청 픽스처.
-     * 비밀번호 검증 정책:
-     *   - 개인정보 필드(name/phone) 변경 → currentPassword 필수
-     *   - 알림 설정(pushEnabled/marketingAgree)만 변경 → currentPassword 불필요
-     */
+    /** 개인정보(name/phone) 변경 요청 — currentPassword 필수 */
     private UserUpdateRequest updateReq(String name, String phone, String currentPw) {
         UserUpdateRequest req = new UserUpdateRequest();
         if (name != null)      ReflectionTestUtils.setField(req, "name",            name);
@@ -100,10 +94,11 @@ class UserServiceTest {
         return req;
     }
 
-    private UserUpdateRequest notificationOnlyReq(boolean push, boolean mkt) {
+    /** 알림 설정만 변경 — currentPassword 불필요 */
+    private UserUpdateRequest notificationOnlyReq(Boolean push, Boolean mkt) {
         UserUpdateRequest req = new UserUpdateRequest();
-        ReflectionTestUtils.setField(req, "pushEnabled",    push);
-        ReflectionTestUtils.setField(req, "marketingAgree", mkt);
+        if (push != null) ReflectionTestUtils.setField(req, "pushEnabled",    push);
+        if (mkt  != null) ReflectionTestUtils.setField(req, "marketingAgree", mkt);
         return req;
     }
 
@@ -112,11 +107,11 @@ class UserServiceTest {
     // ════════════════════════════════════════════════════════════════
 
     @Nested
-    @DisplayName("내 정보 조회")
+    @DisplayName("내 정보 조회 [getMyInfo]")
     class GetMyInfo {
 
         @Test
-        @DisplayName("[정상] userId로 유저 조회 → UserResponse 반환, passwordHash 미포함")
+        @DisplayName("[정상] 유효 userId → UserResponse(maskedEmail 포함) 반환")
         void 정상_내정보조회() {
             given(userMapper.findById(USER_ID)).willReturn(Optional.of(activeUser()));
 
@@ -144,29 +139,29 @@ class UserServiceTest {
     // ════════════════════════════════════════════════════════════════
 
     @Nested
-    @DisplayName("내 정보 수정")
+    @DisplayName("내 정보 수정 [updateMyInfo]")
     class UpdateMyInfo {
-
-    	@Test
-        @DisplayName("[정상] phone 변경 + 비밀번호 검증 통과 → updateUser 호출")
-        void 정상_phone변경_비밀번호검증통과() {
-            given(userMapper.findById(USER_ID)).willReturn(Optional.of(activeUser()));
-            given(passwordEncoder.matches(CURRENT, ENC_PW)).willReturn(true);
-
-            userService.updateMyInfo(USER_ID, updateReq(null, "010-9999-8888", CURRENT));
-
-            then(userMapper).should().updateUser(any());
-        }
 
         @Test
         @DisplayName("[정상] name 변경 + 비밀번호 검증 통과 → updateUser 호출")
-        void 정상_name변경_비밀번호검증통과() {
+        void 정상_name변경() {
             given(userMapper.findById(USER_ID)).willReturn(Optional.of(activeUser()));
             given(passwordEncoder.matches(CURRENT, ENC_PW)).willReturn(true);
 
             userService.updateMyInfo(USER_ID, updateReq("이순신", null, CURRENT));
 
-            then(userMapper).should().updateUser(any());
+            then(userMapper).should().updateUser(any(User.class));
+        }
+
+        @Test
+        @DisplayName("[정상] phone 변경 + 비밀번호 검증 통과 → updateUser 호출")
+        void 정상_phone변경() {
+            given(userMapper.findById(USER_ID)).willReturn(Optional.of(activeUser()));
+            given(passwordEncoder.matches(CURRENT, ENC_PW)).willReturn(true);
+
+            userService.updateMyInfo(USER_ID, updateReq(null, "010-9999-8888", CURRENT));
+
+            then(userMapper).should().updateUser(any(User.class));
         }
 
         @Test
@@ -176,8 +171,19 @@ class UserServiceTest {
 
             userService.updateMyInfo(USER_ID, notificationOnlyReq(true, false));
 
-            then(userMapper).should().updateUser(any());
+            then(userMapper).should().updateUser(any(User.class));
             then(passwordEncoder).should(never()).matches(any(), any());
+        }
+
+        @Test
+        @DisplayName("[실패] 존재하지 않는 userId → USER_NOT_FOUND")
+        void 실패_사용자없음() {
+            given(userMapper.findById(USER_ID)).willReturn(Optional.empty());
+
+            assertThatThrownBy(() -> userService.updateMyInfo(USER_ID, updateReq("이순신", null, CURRENT)))
+                    .isInstanceOf(BusinessException.class)
+                    .satisfies(e -> assertThat(((BusinessException) e).getErrorCode())
+                            .isEqualTo(ErrorCode.USER_NOT_FOUND));
         }
 
         @Test
@@ -186,58 +192,7 @@ class UserServiceTest {
             given(userMapper.findById(USER_ID)).willReturn(Optional.of(activeUser()));
             given(passwordEncoder.matches("WrongPw!", ENC_PW)).willReturn(false);
 
-            assertThatThrownBy(() ->
-                    userService.updateMyInfo(USER_ID, updateReq("이순신", null, "WrongPw!")))
-                    .isInstanceOf(BusinessException.class)
-                    .satisfies(e -> assertThat(((BusinessException) e).getErrorCode())
-                            .isEqualTo(ErrorCode.INVALID_PASSWORD));
-        }
-
-        @Test
-        @DisplayName("[실패] 존재하지 않는 userId → USER_NOT_FOUND")
-        void 실패_사용자없음() {
-            given(userMapper.findById(USER_ID)).willReturn(Optional.empty());
-
-            assertThatThrownBy(() ->
-                    userService.updateMyInfo(USER_ID, updateReq("이순신", null, CURRENT)))
-                    .isInstanceOf(BusinessException.class)
-                    .satisfies(e -> assertThat(((BusinessException) e).getErrorCode())
-                            .isEqualTo(ErrorCode.USER_NOT_FOUND));
-        }
-
-        @Test
-        @DisplayName("[실패] phone 변경 시 currentPassword null → INVALID_PASSWORD")
-        void 실패_phone변경_비밀번호누락() {
-            given(userMapper.findById(USER_ID)).willReturn(Optional.of(activeUser()));
-            
-            given(passwordEncoder.matches(null, ENC_PW)).willReturn(false);
-
-            assertThatThrownBy(() ->
-                    userService.updateMyInfo(USER_ID, updateReq(null, "010-9999-8888", null)))
-                    .isInstanceOf(BusinessException.class)
-                    .satisfies(e -> assertThat(((BusinessException) e).getErrorCode())
-                            .isEqualTo(ErrorCode.INVALID_PASSWORD));
-        }
-
-        @Test
-        @DisplayName("[정상] 변경 필드 없음 → updateUser 미호출 (no-op)")
-        void 정상_변경없음_noOp() {
-            given(userMapper.findById(USER_ID)).willReturn(Optional.of(activeUser()));
-
-            userService.updateMyInfo(USER_ID, new UserUpdateRequest());
-
-            then(userMapper).should(never()).updateUser(any());
-        }
-
-        @Test
-        @DisplayName("[실패] phone 변경 시 currentPassword 빈값 → INVALID_PASSWORD")
-        void 실패_phone변경_비밀번호빈값() {
-            given(userMapper.findById(USER_ID)).willReturn(Optional.of(activeUser()));
-            
-            given(passwordEncoder.matches("", ENC_PW)).willReturn(false);
-
-            assertThatThrownBy(() ->
-                    userService.updateMyInfo(USER_ID, updateReq(null, "010-9999-8888", "")))
+            assertThatThrownBy(() -> userService.updateMyInfo(USER_ID, updateReq("이순신", null, "WrongPw!")))
                     .isInstanceOf(BusinessException.class)
                     .satisfies(e -> assertThat(((BusinessException) e).getErrorCode())
                             .isEqualTo(ErrorCode.INVALID_PASSWORD));
@@ -249,12 +204,12 @@ class UserServiceTest {
     // ════════════════════════════════════════════════════════════════
 
     @Nested
-    @DisplayName("비밀번호 변경")
+    @DisplayName("비밀번호 변경 [changePassword]")
     class ChangePassword {
 
         @Test
-        @DisplayName("[정상] 검증 통과 → updatePassword + revokeAllSessions 호출")
-        void 정상_변경성공() {
+        @DisplayName("[정상] 모든 조건 충족 → updatePassword + insertPasswordHistory + revokeAllSessions 호출")
+        void 정상_비밀번호변경() {
             given(userMapper.findById(USER_ID)).willReturn(Optional.of(activeUser()));
             given(passwordEncoder.matches(CURRENT, ENC_PW)).willReturn(true);
             given(userMapper.findRecentPasswordHashes(USER_ID, 5)).willReturn(Collections.emptyList());
@@ -262,20 +217,7 @@ class UserServiceTest {
 
             userService.changePassword(USER_ID, pwChangeReq(CURRENT, NEW_PW, NEW_PW));
 
-            then(userMapper).should().updatePassword(eq(USER_ID), eq("$2a$10$newHash"), any());
-            then(userMapper).should().revokeAllSessions(USER_ID);
-        }
-
-        @Test
-        @DisplayName("[정상] 최근 이력 없음 → 변경 성공 + 이력 저장 + deleteOldPasswordHistories 호출")
-        void 정상_변경성공_이력저장() {
-            given(userMapper.findById(USER_ID)).willReturn(Optional.of(activeUser()));
-            given(passwordEncoder.matches(CURRENT, ENC_PW)).willReturn(true);
-            given(userMapper.findRecentPasswordHashes(USER_ID, 5)).willReturn(Collections.emptyList());
-            given(passwordEncoder.encode(NEW_PW)).willReturn("$2a$10$newHash");
-
-            userService.changePassword(USER_ID, pwChangeReq(CURRENT, NEW_PW, NEW_PW));
-
+            // updatePassword(userId, hash, lastPasswordChangedAt) — 3개 파라미터
             then(userMapper).should().updatePassword(eq(USER_ID), eq("$2a$10$newHash"), any());
             then(userMapper).should().insertPasswordHistory(USER_ID, "$2a$10$newHash");
             then(userMapper).should().deleteOldPasswordHistories(USER_ID);
@@ -295,6 +237,18 @@ class UserServiceTest {
         }
 
         @Test
+        @DisplayName("[실패] 존재하지 않는 userId → USER_NOT_FOUND")
+        void 실패_사용자없음() {
+            given(userMapper.findById(USER_ID)).willReturn(Optional.empty());
+
+            assertThatThrownBy(() ->
+                    userService.changePassword(USER_ID, pwChangeReq(CURRENT, NEW_PW, NEW_PW)))
+                    .isInstanceOf(BusinessException.class)
+                    .satisfies(e -> assertThat(((BusinessException) e).getErrorCode())
+                            .isEqualTo(ErrorCode.USER_NOT_FOUND));
+        }
+
+        @Test
         @DisplayName("[실패] 현재 비밀번호 불일치 → INVALID_PASSWORD")
         void 실패_현재비밀번호불일치() {
             given(userMapper.findById(USER_ID)).willReturn(Optional.of(activeUser()));
@@ -308,15 +262,20 @@ class UserServiceTest {
         }
 
         @Test
-        @DisplayName("[실패] 존재하지 않는 userId → USER_NOT_FOUND")
-        void 실패_사용자없음() {
-            given(userMapper.findById(USER_ID)).willReturn(Optional.empty());
+        @DisplayName("[실패] 최근 사용한 비밀번호 재사용 → PASSWORD_RECENTLY_USED")
+        void 실패_최근비밀번호재사용() {
+            given(userMapper.findById(USER_ID)).willReturn(Optional.of(activeUser()));
+            given(passwordEncoder.matches(CURRENT, ENC_PW)).willReturn(true);
+            given(userMapper.findRecentPasswordHashes(USER_ID, 5))
+                    .willReturn(List.of("$2a$old1", "$2a$old2", "$2a$old3"));
+            // 새 비밀번호가 이전 이력 중 하나와 일치
+            given(passwordEncoder.matches(eq(NEW_PW), anyString())).willReturn(true);
 
             assertThatThrownBy(() ->
                     userService.changePassword(USER_ID, pwChangeReq(CURRENT, NEW_PW, NEW_PW)))
                     .isInstanceOf(BusinessException.class)
                     .satisfies(e -> assertThat(((BusinessException) e).getErrorCode())
-                            .isEqualTo(ErrorCode.USER_NOT_FOUND));
+                            .isEqualTo(ErrorCode.PASSWORD_RECENTLY_USED));
         }
     }
 
@@ -325,36 +284,41 @@ class UserServiceTest {
     // ════════════════════════════════════════════════════════════════
 
     @Nested
-    @DisplayName("보유 카드 및 신청 현황")
+    @DisplayName("보유 카드 및 신청 현황 [getMyCards]")
     class GetMyCards {
 
         @Test
-        @DisplayName("[정상] ownedCards + applications 반환")
-        void 정상_카드목록반환() {
-            // ▼ 수정: UserService.getMyCards()는 findById()를 호출하지 않음
-            //   selectOwnedCards / selectCardApplications 만 stub
+        @DisplayName("[정상] ownedCards·applications 목록 포함 CardStatusResponse 반환")
+        void 정상_카드현황조회() {
             given(userMapper.selectOwnedCards(USER_ID)).willReturn(Collections.emptyList());
             given(userMapper.selectCardApplications(USER_ID)).willReturn(Collections.emptyList());
 
             CardStatusResponse response = userService.getMyCards(USER_ID);
 
+            assertThat(response).isNotNull();
             assertThat(response.getOwnedCards()).isNotNull();
             assertThat(response.getApplications()).isNotNull();
         }
 
         @Test
-        @DisplayName("[실패] 존재하지 않는 userId → USER_NOT_FOUND")
-        void 실패_사용자없음() {
-            // getMyCards는 findById 미호출이므로 USER_NOT_FOUND를 던지지 않는다.
-            // 실제 서비스 동작: selectOwnedCards/selectCardApplications를 바로 호출 → 빈 결과 반환
-            // → 이 테스트는 서비스 명세와 불일치하므로 정상 동작으로 교체
-            given(userMapper.selectOwnedCards(USER_ID)).willReturn(Collections.emptyList());
-            given(userMapper.selectCardApplications(USER_ID)).willReturn(Collections.emptyList());
+        @DisplayName("[정상] 발급 카드 1건 + 신청 이력 1건 포함 응답")
+        void 정상_카드1건() {
+            OwnedCardRow ownedRow = new OwnedCardRow();
+            ReflectionTestUtils.setField(ownedRow, "userCardId", 10L);
+            ReflectionTestUtils.setField(ownedRow, "cardId",     1L);
+            ReflectionTestUtils.setField(ownedRow, "cardName",   "BNK카드");
+
+            CardApplicationRow appRow = new CardApplicationRow();
+            ReflectionTestUtils.setField(appRow, "applicationId",    100L);
+            ReflectionTestUtils.setField(appRow, "applicationStatus","ISSUED");
+
+            given(userMapper.selectOwnedCards(USER_ID)).willReturn(List.of(ownedRow));
+            given(userMapper.selectCardApplications(USER_ID)).willReturn(List.of(appRow));
 
             CardStatusResponse response = userService.getMyCards(USER_ID);
 
-            assertThat(response.getOwnedCards()).isEmpty();
-            assertThat(response.getApplications()).isEmpty();
+            assertThat(response.getOwnedCards()).hasSize(1);
+            assertThat(response.getApplications()).hasSize(1);
         }
     }
 }
